# data_structures_and_algorithms

./: CMakeLists.txt  README.md  heap_sort.cpp  insertion_sort.cpp  locality_of_reference.cpp  merge_sort.cpp  test_graph.dot
data_structures/binary_search_tree/: CMakeLists.txt  binary_search_tree.hpp  binary_search_tree_demo.cpp
data_structures/binary_search_tree/unit_tests/: CMakeLists.txt  Makefile  binary_search_tree_utest.cpp
data_structures/deque/: CMakeLists.txt  deque.h  deque_demo.cpp
data_structures/deque/unit_tests/: CMakeLists.txt  deque_utest.cpp
data_structures/doubly_linked_list/: CMakeLists.txt  doubly_linked_list.h  doubly_linked_list_demo.cpp
data_structures/doubly_linked_list/unit_tests/: CMakeLists.txt  doubly_linked_list_utest.cpp
data_structures/dynamic_array/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h  dynamic_array_demo.cpp  main.cpp
data_structures/dynamic_array/unit_tests/: CMakeLists.txt  dynamic_array_utest.cpp
data_structures/dynamic_array_non_template/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h  dynamic_array_demo.cpp
data_structures/dynamic_array_non_template/unit_tests/: CMakeLists.txt  dynamic_array_utest.cpp
data_structures/dynamic_array_template/: CMakeLists.txt  dynamic_array.h  dynamic_array_demo.cpp
data_structures/dynamic_array_template/unit_tests/: CMakeLists.txt  dynamic_array_utest.cpp
data_structures/graph/: CMakeLists.txt  adjacency_list_graph.h  graph_algorithms.h  graph_demo.cpp
data_structures/graph/unit_tests/: CMakeLists.txt  adjacency_list_graph_utest.cpp  graph_algorithms_utest.cpp
data_structures/stack/: CMakeLists.txt  istack.h  stack_demo.cpp  stack_dynamic_array.h
data_structures/stack/unit_tests/: CMakeLists.txt  stack_dynamic_array_utest.cpp
dynamic_programming/: longest_increasing_subsequence.cpp
sorting_algorithms/: quick_sort.cpp  selection_sort.cpp
